# csi-webserver-cli-rs

./: .gitignore  Cargo.toml  README.md
docs/: CRATE_DOCS.md  HTTP_API.md
src/: app.rs  lib.rs  main.rs
src/core/: http.rs  messages.rs  mod.rs  ws.rs
src/state/: mod.rs
src/ui/: config.rs  control.rs  dashboard.rs  mod.rs  stream.rs
