[package]
name = "csi-webserver-cli-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
eframe = { version = "0.33.3", default-features = true }
egui = "0.33.3"
futures-util = "0.3.31"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.27.0", features = ["rustls-tls-webpki-roots"] }

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
opt-level = 3
strip = true