[package]
name = "csi-webclient"
version = "0.1.0"
edition = "2024"
description = "Desktop egui client for csi-webserver REST/WebSocket control and CSI stream monitoring"
documentation = "https://docs.rs/csi-webclient"
homepage = "https://github.com/csi-rs/csi-webclient-rs"
repository = "https://github.com/csi-rs/csi-webclient-rs"
keywords = ["csi", "egui", "desktop", "websocket", "client"]
categories = ["gui", "network-programming"]
rust-version = "1.85"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
chrono = "0.4.42"
eframe = { version = "0.33.3", default-features = true }
egui = "0.33.3"
futures-util = "0.3.31"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.27.0", features = ["rustls-tls-webpki-roots"] }

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
[profile.release]
codegen-units = 1
opt-level = 3
strip = true
[profile.release.package."*"]
opt-level = 3